fix(reading): wrap links anywhere to avoid x overflow

--- a/legadilo/static/css/article_details.css
+++ b/legadilo/static/css/article_details.css
@@ -67,7 +67,8 @@ pre {
   max-width: calc(100vw - 24px);
 }
 
-code {
+code,
+a {
   overflow-wrap: anywhere;
 }
 
